# FSL-MiniImageNet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: ResNet18_Pretrain.ipynb  ResNet18_Pretrain_20Epochs.ipynb  ResNet18_fine_tuning.ipynb  data_exploration.ipynb  modelExploration.ipynb  model_fine_tuning.ipynb  model_fine_tuning_ResNet.ipynb  model_fine_tuning_VGG.ipynb  model_fine_tuning_VGG_CUB.ipynb  model_fine_tuning_VGG_CUB_50.ipynb  model_fine_tuning_Vit.ipynb  model_fine_tuning_Vit_CUB.ipynb  model_fine_tuning_Vit_CUB_50.ipynb  model_pre_training.ipynb  model_pre_training_GoogleNet.ipynb  model_pre_training_Resnet152d.ipynb  model_pre_training_Resnet50.ipynb  model_pre_training_VGG11.ipynb  model_pre_training_Vit.ipynb  model_pre_training_restnet18-TS135PC15.ipynb  model_pre_training_restnet18.ipynb  model_pre_training_vgg.ipynb  model_training.ipynb
src/: data_loader - Copy.py  data_loader-TS135PC15-2.py  data_loader-TS135PC15-3.py  data_loader.py  dataloader.py  models-TS135PC15.py  models.py  modelvis.py  training.py
