[project]
name = "fsme-krv"
version = "0.0.1"
authors = [
  { name="Rukshan Perera", email="rukshan.viduranga@gmail.com" },
]
description = "A project create to evaluate pre-trained models on few-shot learning tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KRVPerera/few-shot-MiniImageNet-EuroSAT"
Issues = "https://github.com/KRVPerera/few-shot-MiniImageNet-EuroSAT/issues"

[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]